<resources>
    <string name="app_name">MyCv</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_title_general">General</string>
    <string name="nav_title_education">Education</string>
    <string name="nav_title_projects">Projects</string>
    <string name="nav_title_contact">Contact</string>
    <string name="nav_title_map">Map</string>
    <string name="nav_title_call">Call</string>
    <string name="main_header_name">Jan Stanisław Kowalski</string>
    <string name="main_header_mail">kowalski@gmail.com</string>
    <string name="info_press_details">Press to check details...</string>
    <string name="error">Error</string>
    <string name="image_desc_1">Image 1</string>
    <string name="image_desc_2">Image 2</string>
    <string name="my_phone">600700900</string>
    <string name="wait">Wait...</string>
    <string name="desc_img1">desc_img1</string>
    <string name="desc_img2">desc_img2</string>
    <string name="desc_img3">desc_img3</string>
    <string name="desc_img4">desc_img4</string>
    <string name="desc_img5">desc_img5</string>
</resources>
